@@ -1,3 +1,9 @@
+2008-06-07  Maximilien Cuony
+    * °o° Xpcom for windows !
+
+2008-06-05  Maximilien Cuony
+    * Domains with - for google apps
+
 2008-05-23  Maximilien Cuony
     * XpCom finished... for linux.
 
